fix(messages): overflow messages, display multiline messages
Refactored MessageGroup to be a list of Message, which itself is a selector between HeaderMessage
and BodyMessage

--- a/assets/reset.scss
+++ b/assets/reset.scss
@@ -46,3 +46,7 @@
   background: map-get($scrollbar-color, "foreground");
   border-radius: 10px;
 }
+
+b {
+  font-weight: 600 !important;
+}
